--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a {
 p {
 	margin: 0 auto;
 	width: 400px;
-	text-align: left;
+	text-align: justify;
 	font-size: 16px;
 	padding-top: 30px;
 	padding-bottom: 50px;
