--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ p {
 	font-size: 16px;
 	padding-top: 30px;
 	padding-bottom: 50px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 figcaption {
