--- a/style.css
+++ b/style.css
@@ -21,14 +21,12 @@ a {
 }
 
 p {
-	margin: 0 auto;
+	margin: 0 15;
 	width: 400px;
 	text-align: justify;
 	font-size: 16px;
 	padding-top: 30px;
 	padding-bottom: 50px;
-	padding-left: 15px;
-	padding-right: 15px;
 }
 
 figcaption {
