--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ a {
 }
 
 p {
-	margin: 0 15;
+	display: flex;
+	justify-content: center;
 	width: 400px;
 	text-align: justify;
 	font-size: 16px;
