--- a/style.css
+++ b/style.css
@@ -21,8 +21,7 @@ a {
 }
 
 p {
-	display: flex;
-	justify-content: center;
+	margin: 0 auto;
 	width: 400px;
 	text-align: justify;
 	font-size: 16px;
